--- a/dms/templates/dms/base.html
+++ b/dms/templates/dms/base.html
@@ -11,6 +11,25 @@
 </head>
 
 <body>
+    <div class="container-fluid bg-dark">
+        {%  include 'dms/navbar.html '%}
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                {% block msg %}
+                {% endblock msg %}
+            </div>
+        </div>
+        <div class="row">
+            {% block side%}
+            {% endblock side%}
+
+            {% block content %}
+            {% endblock content %}
+        </div>
+    </div>
+    
     
 
 <script src="{% static 'dms /js/jquery.js' %}"></script>
