added a base file rendered it and created the home

--- a/dms/templates/dms/base.html
+++ b/dms/templates/dms/base.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="{% static 'dms/css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'dms/css/style.css%}">
+    <link rel="stylesheet" href="{% static 'dms/css/style.css ' %}">
 
 </head>
 
 <body>
     <div class="container-fluid bg-dark">
-        {%  include 'dms/navbar.html '%}
+        {%  include 'dms/navbar.html' %}
     </div>
     <div class="container">
         <div class="row">
