--- a/dms/templates/dms/home.html
+++ b/dms/templates/dms/home.html
@@ -1,10 +1,6 @@
-{% extends 'dms/base.html %}
+{% extends 'dms/base.html' %}
 {% load static %}
 {% block content %}
-
-<div class="col-sm-10">
-    <h3 class = "text-white">home page</h3>
-</div>
 
 
 
