--- a/dms/templates/dms/navbar.html
+++ b/dms/templates/dms/navbar.html
@@ -13,13 +13,16 @@
                     <a class="nav-link" href="#">Create Message</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Dashboard</a>
+                    <a class="nav-link" href="dashboard">Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Logout</a>
+                    <a class="nav-link" href="">Logout</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sign_up</a>
+                    <a class="nav-link" href="signup">Sign_up</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about">About</a>
                 </li>
                 <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
