--- a/dms/templates/dms/signup.html
+++ b/dms/templates/dms/signup.html
@@ -1,8 +1,8 @@
 {% extends 'dms/base.html' %}
 {% load static %}
 {% block content %}
-<h1>signup
-     PAGE</h1>
-{{form.as_p}}
+<div class="col-sm-10">
+     <h3>Sign-up page</h3>
+</div>
 
 {% endblock content %}
