--- a/dms/templates/dms/home.html
+++ b/dms/templates/dms/home.html
@@ -1,7 +1,13 @@
 {% extends 'dms/base.html' %}
 {% load static %}
+
 {% block content %}
 
-<h1>home</h1>
+  <h2>Create a new message</h2>
+  <form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Send message</button>
+  </form>
 
-{% endblock content %}
+{% endblock %}
