--- a/dms/templates/dms/navbar.html
+++ b/dms/templates/dms/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">dms</a>
+        <a class="navbar-brand" href="#">E-Daak</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -8,9 +8,6 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Create Message</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="dashboard">Dashboard</a>
@@ -21,9 +18,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="signup">Sign_up</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about">About</a>
-                </li>
+            
                 <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Dropdown
@@ -39,10 +34,7 @@
                     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                 </li> -->
             </ul>
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            
         </div>
     </div>
 </nav>
