--- a/dms/templates/dms/home.html
+++ b/dms/templates/dms/home.html
@@ -2,12 +2,9 @@
 {% load static %}
 
 {% block content %}
-
-  <h2>Create a new message</h2>
-  <form method="post" enctype="multipart/form-data">
+<form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Send message</button>
-  </form>
-
+    {{ form }}
+    <button type="submit">Submit</button>
+</form>
 {% endblock %}
