--- a/dms/templates/dms/home.html
+++ b/dms/templates/dms/home.html
@@ -2,9 +2,10 @@
 {% load static %}
 
 {% block content %}
-<form method="post">
+<form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form }}
     <button type="submit">Submit</button>
 </form>
+
 {% endblock %}
