--- a/dms/templates/dms/home.html
+++ b/dms/templates/dms/home.html
@@ -1,11 +1,5 @@
-{% extends 'dms/base.html' %}
-{% load static %}
-
-{% block content %}
-<form method="post" enctype="multipart/form-data">
+<form method="post" >
     {% csrf_token %}
-    {{ form }}
+    {{ form.as_table }}
     <button type="submit">Submit</button>
 </form>
-
-{% endblock %}
