--- a/dms/templates/dms/navbar.html
+++ b/dms/templates/dms/navbar.html
@@ -13,12 +13,14 @@
                     <a class="nav-link" href="dashboard">Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="">Logout</a>
+                    <a class="nav-link" href="login">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="signup">Sign_up</a>
+                    <a class="nav-link" href="signup">Sign up</a>
                 </li>
-            
+            <li class="nav-item">
+                    <a class="nav-link" href="logout">Logout</a>
+                </li>
                 <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Dropdown
