--- a/dms/templates/dms/home.html
+++ b/dms/templates/dms/home.html
@@ -1,5 +1,11 @@
+{% extends 'dms/base.html' %}
+
+{% block content %}
 <form method="post" >
     {% csrf_token %}
     {{ form.as_table }}
     <button type="submit">Submit</button>
 </form>
+
+
+{% endblock content %}
