--- a/dms/templates/dms/navbar.html
+++ b/dms/templates/dms/navbar.html
@@ -1,40 +1,1 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">E-Daak</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="dashboard">Dashboard</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="">Logout</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="signup">Sign_up</a>
-                </li>
-            
-                <!-- <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                </li> -->
-            </ul>
-            
-        </div>
-    </div>
-</nav>
+<nav> <div> <a href="#">E-Daak</a> <button> <span></span> </button> <div> <ul> <li> <a href="/">Home</a> </li> <li> <a href="dashboard">Dashboard</a> </li> <li> <a href="">Logout</a> </li> <li> <a href="signup">Sign_up</a> </li> </ul> </div> </div> </nav>
